@@ -1,22 +1,24 @@
 package com.uniConnect.matching.service;
 
 import com.uniConnect.campaign.enums.MatchingStatus;
-import com.uniConnect.studentOrg.repository.StudentOrgRepository;
-import com.uniConnect.studentOrg.entity.StudentOrg;
 import com.uniConnect.company.entity.Company;
 import com.uniConnect.company.repository.CompanyRepository;
 import com.uniConnect.matching.dto.MatchReceivedItemResponse;
 import com.uniConnect.matching.dto.MatchSentItemResponse;
 import com.uniConnect.matching.dto.MatchStatusSummaryResponse;
 import com.uniConnect.matching.entity.CollaborationMatchRequest;
+import com.uniConnect.matching.enums.MatchSender;
 import com.uniConnect.matching.repository.CollaborationMatchRequestRepository;
+import com.uniConnect.studentOrg.entity.StudentOrg;
+import com.uniConnect.studentOrg.repository.StudentOrgRepository;
 import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
-import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.stereotype.Service;
 
+import java.time.LocalDateTime;
 import java.util.List;
-
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,6 +27,10 @@ public class CollaborationMatchQueryService {
     private final CollaborationMatchRequestRepository repo;
     private final StudentOrgRepository studentOrgRepository;
     private final CompanyRepository companyRepository;
+
+    /* =========================
+       사용자 → 소속 조회
+    ========================= */
 
     public Long findStudentOrgIdByUserId(Long userId) {
         return studentOrgRepository.findByUsers_UserId(userId)
@@ -38,213 +44,143 @@ public class CollaborationMatchQueryService {
                 .orElseThrow(() -> new RuntimeException("기업 정보가 없습니다. userId=" + userId));
     }
 
-    private String getOrgName(Long studentOrgId) {
-        return studentOrgRepository.findById(studentOrgId)
-                .map(StudentOrg::getOrganizationName)
-                .orElse("알 수 없음");
-    }
+    /* =========================
+       학생단체 요약
+    ========================= */
 
-    private String getCompanyName(Long companyId) {
-        return companyRepository.findById(companyId)
-                .map(Company::getBrandName)
-                .orElse("알 수 없음");
-    }
-
-    // ============================
-    // 1) 학생단체 요약 조회
-    // ============================
     public MatchStatusSummaryResponse getStudentOrgSummary(Long studentOrgId) {
 
-        Long sent = repo.countByStudentOrgId(studentOrgId);
+        Long sent = repo.countByStudentOrg_StudentOrgIdAndSender(
+                studentOrgId, MatchSender.STUDENT_ORG
+        );
+        Long received = repo.countByStudentOrg_StudentOrgIdAndSender(
+                studentOrgId, MatchSender.COMPANY
+        );
 
-        Long approved = repo.countByStudentOrgIdAndStatus(studentOrgId, MatchingStatus.Approved);
-        Long pending = repo.countByStudentOrgIdAndStatus(studentOrgId, MatchingStatus.Requested);
-        Long rejected = repo.countByStudentOrgIdAndStatus(studentOrgId, MatchingStatus.Rejected);
+        Long approved = repo.countByStudentOrg_StudentOrgIdAndStatus(studentOrgId, MatchingStatus.Approved);
+        Long pending = repo.countByStudentOrg_StudentOrgIdAndStatus(studentOrgId, MatchingStatus.Requested);
+        Long rejected = repo.countByStudentOrg_StudentOrgIdAndStatus(studentOrgId, MatchingStatus.Rejected);
 
         return MatchStatusSummaryResponse.builder()
                 .sentCount(sent)
-                .receivedCount(0L)
-                .totalCount(sent)
+                .receivedCount(received)
+                .totalCount(sent + received)
                 .approvedCount(approved)
                 .pendingCount(pending)
                 .rejectedCount(rejected)
                 .build();
     }
 
-    // ============================
-    // 2) 학생단체: 내가 보낸 매칭 목록
-    // ============================
+    /* =========================
+       학생단체: 보낸 매칭
+    ========================= */
+
     public List<MatchSentItemResponse> getStudentOrgSentList(Long studentOrgId, int page, int size) {
 
         Pageable pageable = PageRequest.of(page, size);
 
-        return repo.findByStudentOrgId(studentOrgId, pageable)
+        return repo.findByStudentOrg_StudentOrgIdAndSender(
+                        studentOrgId,
+                        MatchSender.STUDENT_ORG,
+                        pageable
+                )
                 .stream()
                 .map(m -> MatchSentItemResponse.builder()
                         .matchId(m.getId())
-                        .targetId(m.getCompanyId())
-                        .targetName(getCompanyName(m.getCompanyId()))
-                        .eventTitle(m.getEventTitle())
-                        .collaborationType(m.getCollaborationType())
-                        .desiredDate(m.getDesiredDate())
+                        .targetId(m.getCompany().getCompanyId())
+                        .targetName(m.getCompany().getBrandName())
+                        .campaignTitle(m.getCampaign().getName())
+                        .collaborationType(m.getCollaborationType().name())
                         .requestedAt(m.getRequestedAt())
                         .respondedAt(m.getRespondedAt())
                         .status(m.getStatus())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    // ============================
-    // 3) 학생단체: 받은 매칭 목록
-    // ============================
+    /* =========================
+       학생단체: 받은 매칭
+    ========================= */
+
     public List<MatchReceivedItemResponse> getStudentOrgReceivedList(Long studentOrgId, int page, int size) {
 
         Pageable pageable = PageRequest.of(page, size);
 
-        return repo.findByStudentOrgId(studentOrgId, pageable)
+        return repo.findByStudentOrg_StudentOrgIdAndSender(
+                        studentOrgId,
+                        MatchSender.COMPANY,
+                        pageable
+                )
                 .stream()
                 .map(m -> MatchReceivedItemResponse.builder()
                         .matchId(m.getId())
-                        .senderId(m.getCompanyId())
-                        .senderName(getCompanyName(m.getCompanyId()))
-                        .eventTitle(m.getEventTitle())
-                        .collaborationType(m.getCollaborationType())
-                        .desiredDate(m.getDesiredDate())
+                        .senderId(m.getCompany().getCompanyId())
+                        .senderName(m.getCompany().getBrandName())
+                        .campaignTitle(m.getCampaign().getName())
+                        .collaborationType(m.getCollaborationType().name())
                         .requestedAt(m.getRequestedAt())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    /* =========================
+       승인 / 거절
+    ========================= */
+
     public void approveMatchByStudent(Long studentOrgId, Long matchId) {
-        CollaborationMatchRequest match = repo.findById(matchId)
-                .orElseThrow(() -> new RuntimeException("매칭을 찾을 수 없습니다. id=" + matchId));
+        CollaborationMatchRequest match = getMatch(matchId);
 
-        if (!match.getStudentOrgId().equals(studentOrgId)) {
-            throw new RuntimeException("해당 매칭을 승인할 권한이 없습니다.");
+        if (!match.getStudentOrg().getStudentOrgId().equals(studentOrgId)) {
+            throw new RuntimeException("승인 권한이 없습니다.");
         }
 
-        if (match.getStatus() != MatchingStatus.Requested) {
-            throw new RuntimeException("이미 승인 또는 거절된 매칭입니다.");
-        }
-
-        match.setStatus(MatchingStatus.Approved);
-        match.setRespondedAt(java.time.LocalDateTime.now());
-        repo.save(match);
+        updateStatus(match, MatchingStatus.Approved);
     }
 
     public void rejectMatchByStudent(Long studentOrgId, Long matchId) {
-        CollaborationMatchRequest match = repo.findById(matchId)
-                .orElseThrow(() -> new RuntimeException("매칭을 찾을 수 없습니다. id=" + matchId));
+        CollaborationMatchRequest match = getMatch(matchId);
 
-        if (!match.getStudentOrgId().equals(studentOrgId)) {
-            throw new RuntimeException("해당 매칭을 거절할 권한이 없습니다.");
+        if (!match.getStudentOrg().getStudentOrgId().equals(studentOrgId)) {
+            throw new RuntimeException("거절 권한이 없습니다.");
         }
 
-        if (match.getStatus() != MatchingStatus.Requested) {
-            throw new RuntimeException("이미 승인 또는 거절된 매칭입니다.");
-        }
-
-        match.setStatus(MatchingStatus.Rejected);
-        match.setRespondedAt(java.time.LocalDateTime.now());
-        repo.save(match);
-    }
-
-
-    // ============================
-    // 기업 버전
-    // ============================
-    public MatchStatusSummaryResponse getCompanySummary(Long companyId) {
-
-        Long sent = repo.countByCompanyId(companyId);
-        Long approved = repo.countByCompanyIdAndStatus(companyId, MatchingStatus.Approved);
-        Long pending = repo.countByCompanyIdAndStatus(companyId, MatchingStatus.Requested);
-        Long rejected = repo.countByCompanyIdAndStatus(companyId, MatchingStatus.Rejected);
-
-        return MatchStatusSummaryResponse.builder()
-                .sentCount(sent)
-                .receivedCount(0L)
-                .totalCount(sent)
-                .approvedCount(approved)
-                .pendingCount(pending)
-                .rejectedCount(rejected)
-                .build();
-    }
-
-    public List<MatchSentItemResponse> getCompanySentList(Long companyId, int page, int size) {
-
-        Pageable pageable = PageRequest.of(page, size);
-
-        return repo.findByCompanyId(companyId, pageable)
-                .stream()
-                .map(m -> MatchSentItemResponse.builder()
-                        .matchId(m.getId())
-                        .targetId(m.getStudentOrgId())
-                        .targetName(getOrgName(m.getStudentOrgId()))
-                        .eventTitle(m.getEventTitle())
-                        .collaborationType(m.getCollaborationType())
-                        .desiredDate(m.getDesiredDate())
-                        .requestedAt(m.getRequestedAt())
-                        .respondedAt(m.getRespondedAt())
-                        .status(m.getStatus())
-                        .build())
-                .toList();
-    }
-
-
-    // ============================
-    // 기업: 받은 매칭 목록
-    // ============================
-
-    public List<MatchReceivedItemResponse> getCompanyReceivedList(Long companyId, int page, int size) {
-
-        Pageable pageable = PageRequest.of(page, size);
-
-        return repo.findByCompanyId(companyId, pageable)
-                .stream()
-                .map(m -> MatchReceivedItemResponse.builder()
-                        .matchId(m.getId())
-                        .senderId(m.getStudentOrgId())
-                        .senderName(getOrgName(m.getStudentOrgId()))
-                        .eventTitle(m.getEventTitle())
-                        .collaborationType(m.getCollaborationType())
-                        .desiredDate(m.getDesiredDate())
-                        .requestedAt(m.getRequestedAt())
-                        .build())
-                .toList();
+        updateStatus(match, MatchingStatus.Rejected);
     }
 
     public void approveMatchByCompany(Long companyId, Long matchId) {
-        CollaborationMatchRequest match = repo.findById(matchId)
-                .orElseThrow(() -> new RuntimeException("매칭을 찾을 수 없습니다. id=" + matchId));
+        CollaborationMatchRequest match = getMatch(matchId);
 
-        if (!match.getCompanyId().equals(companyId)) {
-            throw new RuntimeException("해당 매칭을 승인할 권한이 없습니다.");
+        if (!match.getCompany().getCompanyId().equals(companyId)) {
+            throw new RuntimeException("승인 권한이 없습니다.");
         }
 
-        if (match.getStatus() != MatchingStatus.Requested) {
-            throw new RuntimeException("이미 승인 또는 거절된 매칭입니다.");
-        }
-
-        match.setStatus(MatchingStatus.Approved);
-        match.setRespondedAt(java.time.LocalDateTime.now());
-        repo.save(match);
+        updateStatus(match, MatchingStatus.Approved);
     }
 
     public void rejectMatchByCompany(Long companyId, Long matchId) {
-        CollaborationMatchRequest match = repo.findById(matchId)
-                .orElseThrow(() -> new RuntimeException("매칭을 찾을 수 없습니다. id=" + matchId));
+        CollaborationMatchRequest match = getMatch(matchId);
 
-        if (!match.getCompanyId().equals(companyId)) {
-            throw new RuntimeException("해당 매칭을 거절할 권한이 없습니다.");
+        if (!match.getCompany().getCompanyId().equals(companyId)) {
+            throw new RuntimeException("거절 권한이 없습니다.");
         }
 
-        if (match.getStatus() != MatchingStatus.Requested) {
-            throw new RuntimeException("이미 승인 또는 거절된 매칭입니다.");
-        }
-
-        match.setStatus(MatchingStatus.Rejected);
-        match.setRespondedAt(java.time.LocalDateTime.now());
-        repo.save(match);
+        updateStatus(match, MatchingStatus.Rejected);
     }
 
+    /* =========================
+       내부 유틸
+    ========================= */
+
+    private CollaborationMatchRequest getMatch(Long id) {
+        return repo.findById(id)
+                .orElseThrow(() -> new RuntimeException("매칭을 찾을 수 없습니다. id=" + id));
+    }
+
+    private void updateStatus(CollaborationMatchRequest match, MatchingStatus status) {
+        if (match.getStatus() != MatchingStatus.Requested) {
+            throw new RuntimeException("이미 처리된 매칭입니다.");
+        }
+        match.setStatus(status);
+        match.setRespondedAt(LocalDateTime.now());
+    }
 }
